--- a/gopher.ui
+++ b/gopher.ui
@@ -123,6 +123,7 @@
                 <property name="width_request">30</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="active">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
