fix up the cursor. fixed a crash with threads not initialized.

--- a/gopher.ui
+++ b/gopher.ui
@@ -104,6 +104,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="editable">False</property>
+                <property name="cursor_visible">False</property>
                 <property name="monospace">True</property>
               </object>
             </child>
