--- a/gopher.ui
+++ b/gopher.ui
@@ -104,6 +104,8 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="editable">False</property>
+                <property name="left_margin">10</property>
+                <property name="right_margin">10</property>
                 <property name="cursor_visible">False</property>
                 <property name="monospace">True</property>
               </object>
